// Updated users table linked to roles
Table users {
  id integer [pk, increment]
  name text [not null]
  email text [unique, not null]
  password text [not null]
  role text [not null, note: "NIVEL DE ACESSO ADIMIN|COORDENADOR|PROFESSOR|ALUNO", default: "ALUNO"]
  course_id integer [ref: > courses.id]
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
  updated_at text [not null, default: `CURRENT_TIMESTAMP`]
}

Table guardians {
  id integer [pk, increment]
  student_id integer [not null, ref: > users.id]
  name text [not null]
  cellphone text
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
  updated_at text [not null, default: `CURRENT_TIMESTAMP`]
}

Table courses {
  id integer [pk, increment]
  name text [not null]
  code text [unique, not null]
}

Table complaints {
  id integer [pk, increment]
  reporter_id text [not null]
  reported_user_id text [not null]
  description text [not null]
  incident_date text [not null]
  status text [default: 'PENDING']
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
  updated_at text [not null, default: `CURRENT_TIMESTAMP`]
}